--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
 .idea/
 Would skip repository https:/github.com/sitaramyadav/automata.git
+out/production/automata/TransitionFunction.class
+out/test/automata/TransitionFunctionTest.class
